--- a/static/style.css
+++ b/static/style.css
@@ -305,7 +305,7 @@ footer p {
     -webkit-transform: translateY(-50%) translateX(-50%);
 }
 
-.section_top__text {
+.section_top_text {
     text-align: center;
 }
 
