--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
         <img src="/static/images/logo_w.png" alt="logo">
       </div>
       <!-- TOPの文章 -->
-      <div class="section_top__text">
+      <div class="section_top_text">
         <p class="display-3 mt-4 mb-3 top_logo_text wow fadeInUp" data-wow-delay="0.8s">PiedPiper</p>
-        <p class="h5 wow fadeInUp" data-wow-delay="1s">Aoyama Gakuin University</p>
-        <p class="h5 wow fadeInUp" data-wow-delay="1s">Programming Society</p>
+        <p class="h5 wow fadeInUp" data-wow-delay="1.1s">Aoyama Gakuin University</p>
+        <p class="h5 wow fadeInUp" data-wow-delay="1.1s">Programming Society</p>
       </div>
     </div>
     <div class="scroll">
