--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,9 @@
       <div class="about-conteinar col-12  col-lg-10 offset-lg-1">
         <h1 class="display-1 wow fadeInUp" data-wow-delay="0.1s">PiedPiper</h1>
         <div class="about_text wow fadeInUp" data-wow-delay="0.3s">
-          <p>青山学院大学プログラミング愛好会です。</p>
-          <p>青学生のテクノロジーへの理解を深め</p>
-          <p>プログラミングの学習及び開発を行っています。</p>
+          <p>青山学院大学公認のプログラミング愛好会です</p>
+          <p>青学生のテクノロジーへの理解を深めるために</p>
+          <p>プログラミングの学習および開発を行っています</p>
         </div>
         <div class="about_imgs">
           <div class="about_imgs_span1"><img class="about_img_1 wow fadeInUp-l" src="/static/images/about_1.svg"
@@ -55,7 +55,7 @@
 <!-- セクション3 -ACTIVITY-->
 <div id="activity" class="section_activity  ">
   <div class="section">
-    <h1 class="sub-heading">ACTIVIY</h1>
+    <h1 class="sub-heading">NOTE</h1>
     <div class="note__api">
       <div class="row justify-content-center contact-body p-lg-5">
         {% for note in note_list %}
@@ -91,12 +91,11 @@
         <div class="col-12 col-lg-3 join_text wow fadeInUp" data-wow-delay="0.1s">
           <p>PiedPiperは</p>
           <p>初心者歓迎のサークルです</p>
-          <p>エンジニア志望の方は勿論、</p>
+          <p>エンジニア志望の方は勿論</p>
           <p>起業・教育関係のお仕事を目指す方</p>
           <p>ものづくりが好きな方</p>
-          <p>新しい時代を感じたい方</p>
-          <p>是非一度ご連絡ください</p>
-          <p>お待ちしています。</p>
+          <p>新しい時代を感じたい方など</p>
+          <p>ぜひ活動にお越しください</p>
         </div>
         <div class=" col-12 col-lg-2 offset-lg-1">
           <div class="section_joinus_aoyama wow fadeInUp" data-wow-delay="0.3s">
@@ -123,9 +122,9 @@
 
       <div class="how_to_join wow fadeInUp" data-wow-delay="0.6s">
         <p>PiedPiper公式LINE、TwitterのDMにて受け付けております。</p>
-        <a href="https://lin.ee/gfGod6A"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加"
-            height="60" border="0"></a>
-        <a href="https://twitter.com/PiedPiper_AGU"><img src="/static/images/Twitter_Logo.png" width="120" alt=""></a>
+        <a href="https://lin.ee/gfGod6A"><img src="static\images\logo\line.png" alt="友だち追加" height="60"></a>
+        <a href="https://twitter.com/PiedPiper_AGU"><img src="static\images\logo\twitter_blue.png" height="60"
+            alt="twitter"></a>
       </div>
     </div>
   </div>
@@ -142,11 +141,19 @@
       <p>Aoyama Gakuin University<br>
         Programming Society</p>
       <p>piedpiper.aoyama@gmail.com</p>
-      <p><a href="https://twitter.com/PiedPiper_AGU">Twitter</a></p>
+      <!-- <p><a href="https://twitter.com/PiedPiper_AGU">Twitter</a></p>
       <p><a href="https://note.com/piedpiper_aoyama/n/ne40b6a301258">Note</a></p>
-      <p><a href="https://lin.ee/gfGod6A">LINE</a></p>
+      <p><a href="https://lin.ee/gfGod6A">LINE</a></p> -->
       <!-- <p><a href="#">Instagram</a></p> -->
       <!-- <p><a href="#">Facebook</a></p> -->
+      <div class="sns">
+        <a href="https://note.com/piedpiper_aoyama"><img src="static\images\logo\note.png" alt="note"></a>
+        <a href="https://twitter.com/PiedPiper_AGU"><img src="static\images\logo\twitter.png" alt="twitter"></a>
+        <a href="https://note.com/piedpiper_aoyama"><img src="static\images\logo\facebook.png" alt="note"></a>
+        <a href="https://www.instagram.com/piedpiper_aoyama/"><img src="static\images\logo\instagram.png"
+            alt="note"></a>
+      </div>
+
     </div>
 
     <div class="section_contact__form col-12 col-lg-3 offset-lg-2">
