--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
 </head>
 
@@ -44,13 +45,13 @@
                 <li class="nav-item"><a class="nav-link" href="#top">Top</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#activity">Activity</a></li>
-                <li class="nav-item"><a class="nav-link" href="#joinus">Join Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="#joinus">Join us</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 {%else%}
                 <li class="nav-item"><a class="nav-link" href="/#top">Top</a></li>
                 <li class="nav-item"><a class="nav-link" href="/#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="/#activity">Activity</a></li>
-                <li class="nav-item"><a class="nav-link" href="/#joinus">Join Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="/#joinus">Join us</a></li>
                 <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
                 {{ style | safe }}
                 {% endif %}
