--- a/static/style.css
+++ b/static/style.css
@@ -537,10 +537,12 @@ footer p {
 
 .how_to_join>p {
     margin: 0;
+    margin-top: 5px;
 }
 
 .how_to_join img {
     margin: 15px;
+    margin-top: 0px;
 }
 
 /*　　　Contact
@@ -807,6 +809,9 @@ footer p {
     }
     .about_img_2, .about_img_4 {
         transform: translate(10%, 0%);
+    }
+    .how_to_join img {
+        margin: 0px 5px 5px 10px;
     }
 }
 
