--- a/templates/base.html
+++ b/templates/base.html
@@ -61,8 +61,8 @@
                                 alt="note"></a>
                         <a href="https://twitter.com/PiedPiper_AGU"><img src="static\images\logo\twitter.png"
                                 alt="twitter"></a>
-                        <a href="https://note.com/piedpiper_aoyama"><img src="static\images\logo\facebook.png"
-                                alt="note"></a>
+                        <!-- <a href="https://note.com/piedpiper_aoyama"><img src="static\images\logo\facebook.png"
+                                alt="note"></a> urlなに-->
                         <a href="https://www.instagram.com/piedpiper_aoyama/"><img
                                 src="static\images\logo\instagram.png" alt="note"></a>
                     </div>
