--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="青山学院大学プログラミング愛好会PiedPiperの公式HPです。">
+    <meta property="og:url" content="https://www.aoyama-piedpiper.com/" />
+    <meta property="og:type" content="website" />   
+    <meta property="og:title" content="青山学院大学プログラミング愛好会" />
+    <meta property="og:description" content="青山学院大学プログラミング愛好会PiedPiperの公式HPです。" />
+    <meta property="og:site_name" content="PiedPiper" />
+    <meta property="og:image" content="https://www.aoyama-piedpiper.com/static/images/ogp.png" />
     <title>PiedPiper</title>
-
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
